--- a/src/app/application/details/application.html
+++ b/src/app/application/details/application.html
@@ -17,17 +17,29 @@
 -->
 <section>
 	<div layout="column" layout-align="end-start" layout-padding class="gravitee-application-header" flex>
-		<div class="gravitee-application-header-content-right" style="position:absolute; right:20px;">
-			<span><ng-md-icon icon="person"></ng-md-icon></span>
-			<span>{{applicationCtrl.application.owner.username}}</span>
-			<span><ng-md-icon icon="timer"></ng-md-icon></span>
-			<span>{{applicationCtrl.application.created_at | date}}</span>
-		</div>
-		<div class="gravitee-application-header-content inset">
-			<h3>{{applicationCtrl.application.name}}</h3>
-			<p>
-				<small>{{applicationCtrl.application.description}}</small>
-			</p>
+		<div class="gravitee-api-header-content inset">
+			<div layout="row" layout-align="start center">
+			
+				<div flex="70">
+					<h3>{{applicationCtrl.application.name}} 
+						<small style="color:white;">( {{applicationCtrl.application.type}} )</small>
+					</h3>
+					<md-content flex class="gravitee-api-header-description" style="color:white;">
+						{{applicationCtrl.application.description}}
+					</md-content>
+				</div>
+			
+				<div flex="30" style="text-align: right">
+					<p style="padding: 0; margin: 0;">
+						<span>{{applicationCtrl.application.owner.username}}</span>
+						<span><ng-md-icon icon="person"></ng-md-icon></span>
+					</p>
+					<p style="padding: 0; margin: 0;">
+						<span>{{applicationCtrl.application.created_at | date}}</span>
+						<span><ng-md-icon icon="timer"></ng-md-icon></span>
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 
