--- a/src/app/api/portal/apiPortal.html
+++ b/src/app/api/portal/apiPortal.html
@@ -17,7 +17,14 @@
 -->
 <section>
   <div ng-include="'app/api/apiHeader.html'"></div>
-  <div class="gravitee-api-documentation-empty" ng-if="apiCtrl.pages.length === 0">There is no published documentation for this API</div>
+	<div ng-if="apiCtrl.pages.length === 0" style="text-align:center; color: #424E5A; fill: #424E5A; ">
+		<h2><ng-md-icon size="42" icon="error"></ng-md-icon> There is no published documentation for this API</h2>
+		<div>
+			<p>
+				The API will be complete shortly.
+			</p>
+		</div>
+	</div>
   <md-tabs md-dynamic-height md-border-bottom ng-if="apiCtrl.pages.length > 0">
     <md-tab label="{{page.name}}" md-on-select="apiCtrl.fetchPage(page)" ng-repeat="page in apiCtrl.pages">
       <gravitee-page page="apiCtrl.page" enable-try-it="false" class="inset"></gravitee-page>
