--- a/src/app/application/applications.html
+++ b/src/app/application/applications.html
@@ -18,7 +18,7 @@
 <section class="content-header">
 </section>  
 
-	<div layout="row" layout-align="end center" layout-padding>
+	<div ng-if="applicationsCtrl.applications.length > 0" layout="row" layout-align="end center" layout-padding>
 		<span class="btn-group">
 			<button ng-class="{'active': !applicationsCtrl.tableMode}" class="btn btn-default" 
 							ng-click="applicationsCtrl.changeMode(false)" type="button">
