--- a/src/app/application/applicationsThumbMode.html
+++ b/src/app/application/applicationsThumbMode.html
@@ -43,3 +43,15 @@
 		</a>
 	</div>
 </div>
+
+<div ng-if="!isLoading && applicationsCtrl.applications.length === 0" style="text-align:center; color: #424E5A; fill: #424E5A; ">
+	<h1><ng-md-icon size="48" icon="error"></ng-md-icon> You have no application (yet).</h1>
+	<div>
+		<p>
+			Create your applications to interact with Gravitee.IO portal
+		</p>
+		<p>
+			<md-button class="md-raised" ng-click="applicationsCtrl.createInitApplication()">Create Applications</md-button>
+		</p>
+	</div>
+</div>
