feat(documentation): add padding to doc page

--- a/src/app/components/documentation/page.html
+++ b/src/app/components/documentation/page.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<div>
+<div class="layout-padding">
   <div ng-if="pageCtrl.markdownType()" btf-markdown="page.content">
   </div>
 
