--- a/src/app/application/details/apikeys/applicationAPIKeys.html
+++ b/src/app/application/details/apikeys/applicationAPIKeys.html
@@ -16,29 +16,29 @@
 
 -->
 <div layout-padding>
-	<md-data-table-container class="application-data-table" ng-show="applicationCtrl.hasKeysDefined()">
-		<table md-data-table class="md-primary">
-			<thead>
-				<tr>
-					<th>API</th>
+  <md-data-table-container class="application-data-table" ng-show="applicationAPIKeysCtrl.hasKeysDefined()">
+    <table md-data-table class="md-primary">
+      <thead>
+        <tr>
+          <th>API</th>
           <th>Revocation Date</th>
           <th>Expiration Date</th>
-					<th>
-            <md-checkbox md-no-ink aria-label="Show all API keys" ng-model="applicationCtrl.showRevokedKeys" class="md-primary">
+          <th>
+            <md-checkbox md-no-ink aria-label="Show all API keys" ng-model="applicationAPIKeysCtrl.showRevokedKeys" class="md-primary">
               Show revoked API Keys
             </md-checkbox>
           </th>
-				</tr>
-			</thead>
-			<tbody ng-repeat="(api, value) in applicationCtrl.apiKeys">
+        </tr>
+      </thead>
+      <tbody ng-repeat="(api, value) in applicationAPIKeysCtrl.apiKeys">
         <tr style="background-color: #9fb9be">
           <td colspan="3" style="font-weight: bold">{{value.name}} - {{value.version}} ({{value.keys.length}} keys)</td>
           <td>
             <md-tooltip ng-if="applicationCtrl.isOwner()" md-direction="left">Renew your API Key</md-tooltip>
-            <ng-md-icon ng-if="applicationCtrl.isOwner()" icon="autorenew" ng-click="applicationCtrl.generateAPIKey(applicationCtrl.application, api)"></ng-md-icon>
+            <ng-md-icon ng-if="applicationCtrl.isOwner()" icon="autorenew" ng-click="applicationAPIKeysCtrl.generateAPIKey(applicationCtrl.application, api)"></ng-md-icon>
           </td>
         </tr>
-				<tr ng-repeat="apikey in value.keys | filter: applicationCtrl.showRevokedKeys">
+		<tr ng-repeat="apikey in value.keys | filter: applicationAPIKeysCtrl.showRevokedKeys">
           <td>
             <ng-md-icon ng-show="!apikey.revoked" icon="done" style="fill: #107F20"></ng-md-icon>
             <ng-md-icon ng-show="apikey.revoked" icon="clear" style="fill: #BE2628"></ng-md-icon>
@@ -48,13 +48,13 @@
           <td>{{apikey.expire_on | date:'yyyy-MM-dd HH:mm:ss'}}</td>
           <td>
             <md-tooltip md-direction="left">Revoke this API Key</md-tooltip>
-            <ng-md-icon ng-show="!apikey.revoked" icon="not_interested" ng-click="applicationCtrl.revoke(apikey.key)"></ng-md-icon>
+            <ng-md-icon ng-show="!apikey.revoked" icon="not_interested" ng-click="applicationAPIKeysCtrl.revoke(apikey.key)"></ng-md-icon>
           </td>
-				</tr>
-			</tbody>
-		</table>
-	</md-data-table-container>
+        </tr>
+      </tbody>
+    </table>
+  </md-data-table-container>
 </div>
-<md-button ng-if="applicationCtrl.isOwner()" class="md-fab md-fab-bottom-right" aria-label="Add"  ng-click="applicationCtrl.showSubscribeApiModal($event)">
-	<ng-md-icon icon="add"></ng-md-icon>
+<md-button ng-if="applicationCtrl.isOwner()" class="md-fab md-fab-bottom-right" aria-label="Add"  ng-click="applicationAPIKeysCtrl.showSubscribeApiModal($event)">
+  <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
