--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -77,6 +77,12 @@
       <textarea ng-model="apiCtrl.api.description" ng-required="true"></textarea>
     </md-input-container>
   </div>
+  <div layout="" layout-sm="column">
+    <md-input-container class="flex">
+      <label>Tags</label>
+      <md-chips ng-model="apiCtrl.api.tags" placeholder="Enter a tag" secondary-placeholder="+Tag" ng-click="formApi.$setDirty()"></md-chips>
+    </md-input-container>
+  </div>
 
   <div class="md-actions gravitee-api-save-button" layout="row">
     <md-button class="md-raised" type="submit" ng-disabled="formApi.$invalid || formApi.$pristine">
