feat(api policies): unable to know which policy is selected
fix #17

--- a/src/app/api/admin/policies/apiPolicies.html
+++ b/src/app/api/admin/policies/apiPolicies.html
@@ -54,6 +54,7 @@
                ng-click="apiPoliciesCtrl.editPolicy($index)"
                ng-hide="apiPoliciesCtrl.filterByMethod(policy)"
                class="gravitee-card gravitee-policy-card"
+               ng-class="apiPoliciesCtrl.getApiPolicyClass(policy)"
                layout="row" layout-align="space-between start">
         <md-card-content layout="column" layout-align="start start">
           <span class="md-subhead">{{policy.name}}</span>
