--- a/src/app/api/admin/policies/apiPolicies.html
+++ b/src/app/api/admin/policies/apiPolicies.html
@@ -25,7 +25,8 @@
     <div class="gravitee-policy-draggable">
       <md-card ng-repeat="policy in apiPoliciesCtrl.policiesToCopy"
                class="gravitee-card gravitee-policy-card"
-               id="{{policy.policyId}}">
+               id="{{policy.policyId}}"
+               ng-cloak >
         <md-tooltip md-direction="right">
           version: {{policy.version}}
         </md-tooltip>
@@ -46,10 +47,15 @@
       </span>
     </div>
     <md-divider></md-divider>
-    <div class="inset" ng-repeat="(path, policies) in apiPoliciesCtrl.apiPoliciesByPath">
-      <h3>{{path}}</h3>
-      <div ng-class="apiPoliciesCtrl.getDropzoneClass(path)" class="dropzone-{{_.kebabCase(path)}}">
-        <md-card ng-repeat="policy in policies"
+    <div class="inset" ng-repeat="path in apiPoliciesCtrl.sortedPaths()" ng-cloak>
+      <h3 ng-if='path === "/"'>{{path}}</h3>
+      <div ng-if='path !== "/"' layout="row" layout-align="space-between center">
+        <h4 >{{path}}</h4>
+        <a href ng-click="apiPoliciesCtrl.removePath(path)">remove path</a>
+      </div>
+      <div ng-class="apiPoliciesCtrl.getDropzoneClass(path)">
+        <span ng-if="apiPoliciesCtrl.initDragularDropZone(path)"></span>
+        <md-card ng-repeat="policy in apiPoliciesCtrl.apiPoliciesByPath[path]"
                  ng-click="apiPoliciesCtrl.editPolicy($index, path)"
                  ng-hide="apiPoliciesCtrl.filterByMethod(policy)"
                  class="gravitee-card gravitee-policy-card"
@@ -66,7 +72,7 @@
           </md-card-content>
           <ng-md-icon icon="close" ng-if='"api-key" !== policy.policyId' class="gravitee-card-close" ng-click="apiPoliciesCtrl.removePolicy(path)"></ng-md-icon>
         </md-card>
-        <span class="gravitee-policy-dropzone-msg" ng-if="policies.length < 2">Drag a policy here.</span>
+        <span class="gravitee-policy-dropzone-msg" ng-if="apiPoliciesCtrl.apiPoliciesByPath[path].length < 2">Drag a policy here.</span>
       </div>
     </div>
   </div>
@@ -97,3 +103,6 @@
 </div>
 
 
+<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apiPoliciesCtrl.showAddPathModal($event)">
+  <ng-md-icon icon="add"></ng-md-icon>
+</md-button>
