--- a/src/app/api/admin/policies/addPoliciesPath.html
+++ b/src/app/api/admin/policies/addPoliciesPath.html
@@ -16,35 +16,45 @@
 
 -->
 <md-dialog aria-label="Add a new path" style="width: 40%">
-  <md-toolbar>
-    <div class="md-toolbar-tools">
-      <h2>New path</h2>
-      <span flex></span>
-      <md-button class="md-icon-button" ng-click="addPoliciesPathCtrl.hide()">
-        <ng-md-icon icon="close"></ng-md-icon>
-      </md-button>
-    </div>
-  </md-toolbar>
-  <md-dialog-content>
-    <div class="md-padding">
-      <form name="newPathForm">
+  <form name="newPathForm" ng-submit="addPoliciesPathCtrl.add()" novalidate>
+    <md-toolbar>
+      <div class="md-toolbar-tools">
+        <h2>New path</h2>
+        <span flex></span>
+        <md-button class="md-icon-button" ng-click="addPoliciesPathCtrl.hide()">
+          <ng-md-icon icon="close"></ng-md-icon>
+        </md-button>
+      </div>
+    </md-toolbar>
+    <md-dialog-content>
+      <div class="md-padding">
         <md-input-container class="md-block" flex-gt-sm>
           <label>New Path</label>
-          <input required name="path" ng-model="addPoliciesPathCtrl.newPath.path">
+          <input required name="path"
+                 ui-validate="{
+                    pathAlreadyExists : 'addPoliciesPathCtrl.rootCtrl.pathNotExists($value)',
+                    mustStartWithSlash : 'addPoliciesPathCtrl.rootCtrl.pathStartWithSlash($value)'
+                 }"
+                 ng-model="addPoliciesPathCtrl.newPath.path">
+          <div ng-messages="newPathForm.path.$error" ng-show="newPathForm.path.$dirty">
+            <div ng-message="required">This is required!</div>
+            <div ng-message="pathAlreadyExists">This path is already configured.</div>
+            <div ng-message="mustStartWithSlash">The path must start with /</div>
+          </div>
         </md-input-container>
         <md-checkbox ng-model="addPoliciesPathCtrl.newPath.copyFromRootPath" aria-label="Copy from root path">
           Copy all policies and configuration from the root path ?
         </md-checkbox>
-      </form>
-    </div>
-  </md-dialog-content>
+      </div>
+    </md-dialog-content>
 
-  <div class="md-actions" layout="row">
-    <md-button type="button" ng-click="addPoliciesPathCtrl.hide()" class="md-primary">
-      Cancel
-    </md-button>
-    <md-button type="submit" class="md-primary" ng-click="addPoliciesPathCtrl.add()">
-      Add
-    </md-button>
-  </div>
+    <div class="md-actions" layout="row">
+      <md-button type="button" ng-click="addPoliciesPathCtrl.hide()" class="md-primary">
+        Cancel
+      </md-button>
+      <md-button type="submit" class="md-primary" ng-disabled="newPathForm.$invalid">
+        Add
+      </md-button>
+    </div>
+  </form>
 </md-dialog>
