--- a/src/app/api/admin/policies/apiPolicies.html
+++ b/src/app/api/admin/policies/apiPolicies.html
@@ -35,49 +35,69 @@
         </md-card-content>
       </md-card>
     </div>
-    </div>
-
-  <div flex="50">
-    <div layout="row" layout-align="start center" class="gravitee-policy-filters">
-      <span flex class="badge gravitee-policy-method-badge-filter"
-            ng-class="apiPoliciesCtrl.getHttpMethodClass(httpMethod, apiPoliciesCtrl.httpMethodsFilter)"
-            ng-repeat="httpMethod in apiPoliciesCtrl.httpMethods"
-            ng-click="apiPoliciesCtrl.toggleHttpMethod(httpMethod, apiPoliciesCtrl.httpMethodsFilter)">
-        {{httpMethod | uppercase}}
-      </span>
-    </div>
-    <md-divider></md-divider>
-    <div class="inset" ng-repeat="path in apiPoliciesCtrl.sortedPaths()" ng-cloak>
-      <h3 ng-if='path === "/"'>{{path}}</h3>
-      <div ng-if='path !== "/"' layout="row" layout-align="space-between center">
-        <h4 >{{path}}</h4>
-        <a href ng-click="apiPoliciesCtrl.removePath(path)">remove path</a>
-      </div>
-      <div ng-class="apiPoliciesCtrl.getDropzoneClass(path)">
-        <span ng-if="apiPoliciesCtrl.initDragularDropZone(path)"></span>
-        <md-card ng-repeat="policy in apiPoliciesCtrl.apiPoliciesByPath[path]"
-                 ng-click="apiPoliciesCtrl.editPolicy($index, path)"
-                 ng-hide="apiPoliciesCtrl.filterByMethod(policy)"
-                 class="gravitee-card gravitee-policy-card"
-                 ng-class="apiPoliciesCtrl.getApiPolicyClass(policy)"
-                 layout="row" layout-align="space-between start">
-          <md-card-content layout="column" layout-align="start start">
-            <span class="md-subhead">{{policy.name}}</span>
-            <div layout="row" layout-align="start center">
-              <span class="badge gravitee-policy-method-badge-info gravitee-policy-method-badge-GET-selected" ng-if="policy.methods.length === apiPoliciesCtrl.httpMethods.length">ALL</span>
-              <div ng-if="policy.methods.length != apiPoliciesCtrl.httpMethods.length">
-                <span class="badge gravitee-policy-method-badge-info gravitee-policy-method-badge-{{method}}-selected" ng-repeat="method in policy.methods">{{method | uppercase}}</span>
-              </div>
-            </div>
-          </md-card-content>
-          <ng-md-icon icon="close" ng-if='"api-key" !== policy.policyId' class="gravitee-card-close" ng-click="apiPoliciesCtrl.removePolicy(path)"></ng-md-icon>
-        </md-card>
-        <span class="gravitee-policy-dropzone-msg" ng-if="apiPoliciesCtrl.apiPoliciesByPath[path].length < 2">Drag a policy here.</span>
-      </div>
-    </div>
   </div>
 
-  <div flex="30">
+  <div flex="40" layout="column">
+    <form name="editPathForm" novalidate>
+      <div layout="row" layout-align="start center" class="gravitee-policy-filters">
+        <span flex class="badge gravitee-policy-method-badge-filter"
+              ng-class="apiPoliciesCtrl.getHttpMethodClass(httpMethod, apiPoliciesCtrl.httpMethodsFilter)"
+              ng-repeat="httpMethod in apiPoliciesCtrl.httpMethods"
+              ng-click="apiPoliciesCtrl.toggleHttpMethod(httpMethod, apiPoliciesCtrl.httpMethodsFilter)">
+          {{httpMethod | uppercase}}
+        </span>
+      </div>
+      <md-divider></md-divider>
+      <div class="inset" ng-repeat="path in apiPoliciesCtrl.sortedPaths()" ng-cloak>
+        <h3 class="gravitee-policy-path" ng-if='path === "/"'>{{path}}</h3>
+        <div ng-if='path !== "/"' layout="row" layout-align="space-between center">
+          <div flex="80">
+            <md-input-container>
+              <input ng_model="path"
+                     name="path{{$index}}"
+                     class="gravitee-policy-path"
+                     required
+                     ui-validate="{
+                        pathAlreadyExists : 'apiPoliciesCtrl.pathNotExists($value, $index)',
+                        mustStartWithSlash : 'apiPoliciesCtrl.pathStartWithSlash($value)'
+                     }"
+                     ng-keydown="apiPoliciesCtrl.pathKeyPress($event, editPathForm['path'+$index], path, $index)"
+                     ng-blur="apiPoliciesCtrl.restoreOldPath($index, editPathForm['path'+$index])">
+              <div ng-messages="editPathForm['path'+$index].$error"
+                   ng-show="editPathForm['path'+$index].$dirty">
+                <div ng-message="required">This is required!</div>
+                <div ng-message="pathAlreadyExists">This path is already configured.</div>
+                <div ng-message="mustStartWithSlash">The path must start with /</div>
+              </div>
+            </md-input-container>
+          </div>
+          <div flex style="text-align: right;"><a href ng-click="apiPoliciesCtrl.removePath(path)">remove path</a></div>
+        </div>
+        <div ng-class="apiPoliciesCtrl.getDropzoneClass(path)">
+          <span ng-if="apiPoliciesCtrl.initDragularDropZone(path)"></span>
+          <md-card ng-repeat="policy in apiPoliciesCtrl.apiPoliciesByPath[path]"
+                   ng-click="apiPoliciesCtrl.editPolicy($index, path)"
+                   ng-hide="apiPoliciesCtrl.filterByMethod(policy)"
+                   class="gravitee-card gravitee-policy-card"
+                   ng-class="apiPoliciesCtrl.getApiPolicyClass(policy)"
+                   layout="row" layout-align="space-between start">
+            <md-card-content layout="column" layout-align="start start">
+              <span class="md-subhead">{{policy.name}}</span>
+              <div layout="row" layout-align="start center">
+                <span class="badge gravitee-policy-method-badge-info gravitee-policy-method-badge-GET-selected" ng-if="policy.methods.length === apiPoliciesCtrl.httpMethods.length">ALL</span>
+                <div ng-if="policy.methods.length != apiPoliciesCtrl.httpMethods.length">
+                  <span class="badge gravitee-policy-method-badge-info gravitee-policy-method-badge-{{method}}-selected" ng-repeat="method in policy.methods">{{method | uppercase}}</span>
+                </div>
+              </div>
+            </md-card-content>
+            <ng-md-icon icon="delete" ng-if='"api-key" !== policy.policyId' class="gravitee-card-close" ng-click="apiPoliciesCtrl.removePolicy(path)"></ng-md-icon>
+          </md-card>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div flex layout="column">
     <div ng-if="apiPoliciesCtrl.selectedApiPolicy.policyId">
       <div class="inset">
         <div layout="row" layout-align="space-between center">
@@ -103,6 +123,6 @@
 </div>
 
 
-<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apiPoliciesCtrl.showAddPathModal($event)">
+<md-button class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add" ng-click="apiPoliciesCtrl.showAddPathModal($event)">
   <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
