--- a/src/app/application/applications.html
+++ b/src/app/application/applications.html
@@ -16,21 +16,21 @@
 
 -->
 <section class="content-header">
-</section>  
+</section>
 
 	<div ng-if="applicationsCtrl.applications.length > 0" layout="row" layout-align="end center" layout-padding>
 		<span class="btn-group">
-			<button ng-class="{'active': !applicationsCtrl.tableMode}" class="btn btn-default" 
+			<button ng-class="{'active': !applicationsCtrl.tableMode}" class="btn btn-default"
 							ng-click="applicationsCtrl.changeMode(false)" type="button">
 				<ng-md-icon icon="apps"></ng-md-icon>
 			</button>
-			<button ng-class="{'active': applicationsCtrl.tableMode}" class="btn btn-default" 
+			<button ng-class="{'active': applicationsCtrl.tableMode}" class="btn btn-default"
 							ng-click="applicationsCtrl.changeMode(true)" type="button">
 				<ng-md-icon icon="list"></ng-md-icon>
 			</button>
 		</span>
 	</div>
-	<div ui-view />
+	<div ui-view></div>
 
 <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="applicationsCtrl.showAddApplicationModal($event)">
 	<ng-md-icon icon="add"></ng-md-icon>
