fix #36: ensure that the add button (+) follows the scroll

--- a/src/app/api/admin/members.html
+++ b/src/app/api/admin/members.html
@@ -48,6 +48,6 @@
   </table>
 </md-data-table-container>
 
-<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apiCtrl.showAddMemberModal($event)">
+<md-button class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add" ng-click="apiCtrl.showAddMemberModal($event)">
   <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
