--- a/src/app/api/admin/properties/properties.html
+++ b/src/app/api/admin/properties/properties.html
@@ -46,6 +46,6 @@
   </div>
 </form>
 
-<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apiPropertiesCtrl.showPropertyModal()">
+<md-button class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add" ng-click="apiPropertiesCtrl.showPropertyModal()">
   <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
