--- a/src/app/api/apisList.html
+++ b/src/app/api/apisList.html
@@ -32,6 +32,6 @@
 	</div>
 	<div ui-view></div>
 
-<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apisCtrl.showApiModal()">
+<md-button class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add" ng-click="apisCtrl.showApiModal()">
   <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
