--- a/src/app/api/admin/documentation/apiDocumentation.html
+++ b/src/app/api/admin/documentation/apiDocumentation.html
@@ -33,6 +33,6 @@
   </md-list>
   <div flex ui-view></div>
 </div>
-<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="documentationCtrl.showNewPageDialog()">
+<md-button class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add" ng-click="documentationCtrl.showNewPageDialog()">
   <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
