--- a/src/app/application/details/apikeys/applicationAPIKeys.html
+++ b/src/app/application/details/apikeys/applicationAPIKeys.html
@@ -59,6 +59,6 @@
     </table>
   </md-data-table-container>
 </div>
-<md-button ng-if="applicationCtrl.isOwner()" class="md-fab md-fab-bottom-right" aria-label="Add"  ng-click="applicationAPIKeysCtrl.showSubscribeApiModal($event)">
+<md-button ng-if="applicationCtrl.isOwner()" class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add"  ng-click="applicationAPIKeysCtrl.showSubscribeApiModal($event)">
   <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
