--- a/src/app/application/details/members/applicationMembers.html
+++ b/src/app/application/details/members/applicationMembers.html
@@ -50,6 +50,6 @@
   </md-data-table-container>
 </div>
 
-<md-button ng-if="applicationCtrl.isOwner()" class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="applicationMembersCtrl.showAddMemberModal($event)">
+<md-button ng-if="applicationCtrl.isOwner()" class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add" ng-click="applicationMembersCtrl.showAddMemberModal($event)">
   <ng-md-icon icon="add"></ng-md-icon>
 </md-button>
