--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -125,6 +125,10 @@ ng-md-icon {
   z-index: 1;
 }
 
+.gravitee-add-button {
+  position: fixed !important;
+}
+
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
