fix(apiKey): define a fixed width on clipboard icon container
This fix replace a span by a div with a fixed width (24px)

Closes #43

--- a/src/app/api/admin/apikeys/apikeys.html
+++ b/src/app/api/admin/apikeys/apikeys.html
@@ -39,8 +39,8 @@
             <ng-md-icon ng-show="!apikey.revoked" icon="done" style="fill: #107F20"></ng-md-icon>
             <ng-md-icon ng-show="apikey.revoked" icon="clear" style="fill: #BE2628"></ng-md-icon>
             <code>{{apikey.key}}</code>
-            <span>
-             	<md-tooltip md-direction="right">Copy to clipboard</md-tooltip>
+			<span style="position: absolute">
+			  <md-tooltip md-direction="right">Copy to clipboard</md-tooltip>
               <ng-md-icon ng-show="hovered" ng-hide="!hovered" icon="link" ngclipboard data-clipboard-text="{{apikey.key}}" role="button" ></ng-md-icon>
              </span>
           </td>
