--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/apiMember.html
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/templates/apiMember.html
@@ -3,7 +3,7 @@
         <h3>Hi ${username},</h3>
         <div>You are now a member of the API ${api}</div>
         <footer>
-    		<#include "footer.html">
+    		<#include "footer.html" />
     	</footer>
 	</body>
 </html>
