fix(event): No message 'API out of sync...' when updating a policy

--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -155,7 +155,7 @@ $flowRadius: 120px;
 }
 
 .gravitee-api-banner {
-  position: absolute;
+  position: fixed;
   top: 50px;
   width: 100%;
   cursor: pointer;
