--- a/src/app/api/admin/policies/apiPolicies.html
+++ b/src/app/api/admin/policies/apiPolicies.html
@@ -66,7 +66,8 @@
                             mustStartWithSlash : 'apiPoliciesCtrl.pathStartWithSlash($value)'
                          }"
                              ng-keydown="apiPoliciesCtrl.pathKeyPress($event, editPathForm['path'+$index], path, $index)"
-                             ng-blur="apiPoliciesCtrl.restoreOldPath($index, editPathForm['path'+$index])">
+                             ng-blur="apiPoliciesCtrl.restoreOldPath($index, editPathForm['path'+$index])"
+                             ng-click="$event.stopPropagation();">
                       <div ng-messages="editPathForm['path'+$index].$error"
                            ng-show="editPathForm['path'+$index].$dirty">
                         <div ng-message="required">This is required!</div>
