--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -18,7 +18,7 @@
 <section>
   <div class="gravitee-api-banner">
     <div ng-show="!apiCtrl.apiIsSynchronized && !apiCtrl.apiJustDeployed" ng-click="apiCtrl.showDeployAPIConfirm($event, apiCtrl.api)" class="gravitee-api-banner-content" ng-cloak>
-      API out of sync, <a>deploy your API</a> in gateways.
+      API out of sync, <a>deploy your API</a>
     </div>
   </div>
 
