--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -57,11 +57,11 @@
 </div>
 
 <div ng-if="!isLoading && apisCtrl.apis.length === 0" style="text-align:center; color: #424E5A; fill: #424E5A; ">
-	<h1><ng-md-icon size="48" icon="error"></ng-md-icon> Hmmm, it seems that there is no API here :(</h1>
+	<h1><ng-md-icon size="48" icon="error"></ng-md-icon> Hmmm, there is no API for you here :(</h1>
 	<div>
-    <h4 style="margin-top: 30px;">Let's start using Gravitee.io portal</h4>
+    <h4 style="margin-top: 30px;" gravitee-roles-allowed="ADMIN, API_PUBLISHER">Let's start using Gravitee.io portal</h4>
 		<p style="margin-top: 30px;">
-			<md-button ng-if="authenticated" class="md-raised" ng-click="apisCtrl.createInitAPI()">Create your first API</md-button>
+			<md-button ng-if="authenticated" gravitee-roles-allowed="ADMIN, API_PUBLISHER" class="md-raised" ng-click="apisCtrl.createInitAPI()">Create your first API</md-button>
 			<md-button ng-if="!authenticated" class="md-raised" ng-click="apisCtrl.login()">Login</md-button>
 		</p>
 	</div>
