--- a/src/app/api/admin/policies/apiPolicies.html
+++ b/src/app/api/admin/policies/apiPolicies.html
@@ -50,7 +50,7 @@
       <md-divider></md-divider>
       <div class="gravitee-policy-panel gravitee-policy-panel-center">
         <v-accordion class="vAccordion--default" multiple>
-            <v-pane ng-repeat="path in apiPoliciesCtrl.sortedPaths()">
+            <v-pane ng-repeat="path in apiPoliciesCtrl.sortedPaths()" expanded="$first">
               <v-pane-header>
                 <h3 class="gravitee-policy-path" ng-if='path === "/"'>{{path}}</h3>
                 <div ng-if='path !== "/"' layout="row" layout-align="space-between center">
